--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
     "vue": "^2.6.11",
+    "vue-cookie-law": "^1.13.3",
+    "vue-moment": "^4.1.0",
+    "vue-plotly": "^1.1.0",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
@@ -25,6 +32,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-tracker": "^0.4.3"
   }
 }
